﻿2006-11-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/log.cpp: Higher precision log timestamps.
	* src/graphics.cpp, src/gui/gui.cpp, src/openglgraphics.cpp,
	src/main.cpp, src/resources/equipmentdb.cpp,
	src/resources/resourcemanager.cpp: Added some additional log
	statements.
	* src/resources/itemdb.cpp: Removed usage of READ_PROP in favour of
	XML::getProperty and updated log statements.
	* src/resources/image.cpp: Added support for loading TGA images.

2006-11-26  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/resources/resourcemanager.cpp: Remove unnecessary check for
	file existance, loading will just fail with the correct error message.

2006-11-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/being.cpp, src/net/beinghandler.cpp, src/being.h:
	Made Being::mDirection protected, forcing the use of setDirection.
	* src/npc.cpp, src/player.cpp, src/animatedsprite.h, src/monster.cpp,
	src/resources/resourcemanager.h: Defaulted variant argument to 0 since
	this is the most common situation.
	* src/resources/spritedef.cpp, src/resources/spritedef.h: Some
	refactoring, splitting up the loading into several methods, in
	preparation of adding support for including other sprites.
	* src/main.cpp: ItemDB needs to be unloaded before deleting the
	resource manager instance, since ItemInfo refers to an Image.

2006-11-26  Philipp Sehmisch  <tmw@crushnet.org>

	* src/being.cpp, src/being.h, src/engine.cpp, src/main.cpp,
	src/player.cpp, src/player.h, src/resources/equipmentdb.h,
	src/resources/equipmentdb.cpp, src/resources/equipmentinfo.h,
	src/resources/itemdb.cpp, src/resources/itemdb.h,
	data/graphics/images/error.png, data/graphics/sprites/error.xml:
	Added the EquipmentDB namespace that reads the equipment.xml, maps
	equipment IDs to sprite definition files and thus allows gender
	specific equipment sprites.
	* data/graphics/sprites/chest-leather-female.png,
	data/graphics/sprites/chest-leather-male.png,