@@ -1,4 +1,9 @@
-﻿2006-11-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+2006-11-27  Philipp Sehmisch  <tmw@crushnet.org>
+
+    * src/log.cpp, src/util/wingettimeofday.h:
+    Added implementation of gettimeofday() for windows machines.
+
+2006-11-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/log.cpp: Higher precision log timestamps.
 	* src/graphics.cpp, src/gui/gui.cpp, src/openglgraphics.cpp,
